--- a/scss/components/about-us/achievements/achievements.scss
+++ b/scss/components/about-us/achievements/achievements.scss
@@ -67,8 +67,8 @@
       }
     }
     .active{
-      position: absolute;
-      z-index: 2;
+      //position: absolute;
+      //z-index: 2;
       opacity: 1;
     }
     .carousel-indicators{
