--- a/scss/services.scss
+++ b/scss/services.scss
@@ -1,4 +1,8 @@
 @import "common";
 @import "components/header";
-@import "components/demo-services";
+@import "components/our-services";
+@import "components/services";
+@import "components/company";
 @import "components/footer";
+
+
