--- a/css/homepage.css
+++ b/css/homepage.css
@@ -50,7 +50,7 @@
   font-size: 14px;
 }
 
-.footer__number a, .footer__email a, .articles__wrapper-card-wrap-title, .carousel-team__inner-info-name {
+.footer__number a, .footer__email a, .articles__wrapper-card-wrap-title, .carousel-team__inner-info-name, .btn {
   font-weight: 700;
   font-size: 16px;
 }
@@ -154,11 +154,62 @@ a {
   --bs-gutter-x: 60px;
 }
 
+.btn {
+  padding: 18px 0;
+  border: none;
+  color: #fff;
+  background: #24A3FF;
+  box-shadow: 0 0 20px rgba(36, 163, 255, 0.5);
+  border-radius: 12px;
+}
+.btn:hover {
+  background: #0085FF;
+  color: white;
+  transition: 0.5s;
+  transform: perspective(300px) rotateX(45deg);
+}
+.btn:active {
+  --bs-btn-active-bg: #006CCF;
+  --bs-btn-active-color: #fff;
+}
+
+.d-center {
+  align-items: center;
+  justify-content: center;
+}
+
+.grey-line {
+  color: rgba(255, 255, 255, 0.5);
+  margin: 15px 0;
+  border-top: 4px solid;
+  opacity: inherit;
+}
+
 @media (min-width: 1600px) {
   .container {
     max-width: 1600px;
   }
 }
+.navbar-brand {
+  margin-top: -20px;
+}
+.navbar-brand:hover .navbar-brand-way {
+  color: #F0145A;
+  transition: 0.8s;
+  box-shadow: 0 0 65px -20px black;
+}
+.navbar-brand .slash-nav {
+  margin-bottom: 14px;
+}
+.navbar-brand-way {
+  font-size: 36px;
+  line-height: 44px;
+  color: #323264;
+}
+.navbar-brand-way:hover, .navbar-brand-way .navbar-brand {
+  color: #F0145A;
+}
+
 .header {
   position: absolute;
   width: 100%;
@@ -435,9 +486,6 @@ a {
 .our-service__description a {
   padding-bottom: 10px;
 }
-.our-service__wrap {
-  padding: 30px;
-}
 .our-service__info-columns img {
   margin-bottom: 30px;
 }
@@ -449,6 +497,42 @@ a {
   font-size: 16px;
   color: #fff;
   margin-bottom: 0;
+}
+.our-service__wrap {
+  padding: 30px;
+}
+.our-service__wrap:hover {
+  animation: shake-logo 0.3s linear;
+}
+@keyframes shake-logo {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    transform: translate(2px, 2px);
+  }
+  80% {
+    transform: translate(2px, -2px);
+  }
+  100% {
+    transform: translate(0);
+  }
+}
+.our-service__wrap:hover a {
+  text-decoration: underline;
+}
+.our-service__wrap:hover img {
+  border: 1px solid #F0145A;
+  border-radius: 22px;
+}
+.our-service__wrap a:hover {
+  text-decoration: none;
 }
 
 @media (min-width: 1600px) {
