--- a/css/team-all.css
+++ b/css/team-all.css
@@ -39,13 +39,13 @@
   --bs-list-group-disabled-bg: none;
 }
 
-.team-info__title {
+.first-person__name, .team-info__title {
   background: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.footer__wrapper-address-link {
+.footer__wrapper-address-link, .first-person__info-way {
   font-weight: 700;
   font-size: 14px;
 }
@@ -55,7 +55,7 @@
   font-size: 16px;
 }
 
-.team-info__title {
+.first-person__name, .team-info__title {
   font-weight: 700;
   font-size: 38px;
 }
@@ -113,9 +113,25 @@ a {
 }
 .btn:hover {
   background: #0085FF;
+  color: white;
+  transition: 0.5s;
+  transform: perspective(300px) rotateX(45deg);
 }
 .btn:active {
-  background: #006CCF;
+  --bs-btn-active-bg: #006CCF;
+  --bs-btn-active-color: #fff;
+}
+
+.d-center {
+  align-items: center;
+  justify-content: center;
+}
+
+.grey-line {
+  color: rgba(255, 255, 255, 0.5);
+  margin: 15px 0;
+  border-top: 4px solid;
+  opacity: inherit;
 }
 
 @media (min-width: 1600px) {
@@ -123,6 +139,26 @@ a {
     max-width: 1600px;
   }
 }
+.navbar-brand {
+  margin-top: -20px;
+}
+.navbar-brand:hover .navbar-brand-way {
+  color: #F0145A;
+  transition: 0.8s;
+  box-shadow: 0 0 65px -20px black;
+}
+.navbar-brand .slash-nav {
+  margin-bottom: 14px;
+}
+.navbar-brand-way {
+  font-size: 36px;
+  line-height: 44px;
+  color: #323264;
+}
+.navbar-brand-way:hover, .navbar-brand-way .navbar-brand {
+  color: #F0145A;
+}
+
 .header {
   width: 100%;
   padding: 50px 0 30px;
@@ -365,6 +401,7 @@ a {
   background: #E6E6F0;
 }
 .team-info__inner-wrapper img {
+  object-fit: cover;
   width: 100%;
   height: 400px;
   border-radius: 12px;
@@ -421,10 +458,14 @@ a {
   }
 }
 
+.first-person {
+  padding: 30px 0 60px;
+}
 .first-person__wrapper {
   gap: 60px;
 }
 .first-person__img {
+  object-fit: cover;
   width: 400px;
   height: 500px;
   border-radius: 12px;
@@ -436,29 +477,80 @@ a {
   flex-direction: column;
   gap: 10px;
 }
-.first-person__info-link p {
-  margin: 0;
+.first-person__link-post {
+  font-size: 14px;
+  color: rgb(179, 179, 186);
+  margin-bottom: 10px;
 }
-@media (min-width: 1405px) {
+.first-person__link-mail, .first-person__link-li {
+  font-size: 16px;
+  color: #24A3FF;
+  margin-bottom: 10px;
+}
+.first-person__link-mail:hover, .first-person__link-li:hover {
+  color: #F0145A;
+}
+.first-person .grey-line {
+  color: rgb(230, 230, 240);
+}
+.first-person__info-text {
+  margin: 0;
+  font-size: 16px;
+  margin-bottom: 30px;
+}
+.first-person__info-way {
+  margin-bottom: 15px;
+  color: #323264;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.team-first-person .footer__line {
+  display: none;
+}
+
+@media (min-width: 1401px) {
   .first-person .container-lg {
     max-width: 1600px;
+  }
+}
+@media (min-width: 1400px) {
+  .first-person__link-inner {
+    gap: 10px;
+  }
+  .first-person__link-inner > p:after, .first-person__link-inner > a:not(:last-child):after {
+    content: "";
+    display: inline-block;
+    width: 7px;
+    height: 7px;
+    background: #E6E6F0;
+    border-radius: 50%;
+    margin: 0 6px 2px 12px;
   }
 }
 @media (max-width: 1399px) {
   .first-person__info-link {
     flex-direction: column;
   }
-  .first-person__info-link-media {
+  .first-person__link-inner {
     flex-direction: column;
   }
 }
-@media (min-width: 1024px) {
-  .first-person__info-d-none {
+@media (max-width: 1024px) {
+  .first-person__img {
+    height: 375px;
+    width: 300px;
+  }
+  .first-person__inner-wrapper {
+    align-items: center;
+    display: flex;
+  }
+  .first-person__info-wrapper {
     display: none;
   }
 }
-@media (max-width: 1023px) {
-  .first-person__info-text {
+@media (min-width: 1025px) {
+  .first-person__info-d-none {
     display: none;
   }
 }
@@ -469,6 +561,9 @@ a {
   }
 }
 @media (max-width: 567px) {
+  .first-person {
+    padding: 30px 0;
+  }
   .first-person__img {
     width: 100%;
     height: 375px;
@@ -479,24 +574,6 @@ a {
   }
 }
 
-.first-person__wrapper {
-  gap: 60px;
-}
-.first-person__img {
-  width: 400px;
-  height: 500px;
-  border-radius: 12px;
-}
-.first-person__inner-wrapper {
-  width: 100%;
-}
-.first-person__info-link {
-  flex-direction: column;
-  gap: 10px;
-}
-.first-person__info-link p {
-  margin: 0;
-}
 .footer {
   padding: 30px 0;
   background-color: #F5F5FA;
