--- a/scss/common/common.scss
+++ b/scss/common/common.scss
@@ -1,12 +1,14 @@
-html{
+html {
   scroll-behavior: smooth;
- //плавная прокрутка без джаваскрипта
+  //плавная прокрутка без джаваскрипта
 }
+
 body {
   font-family: $main-font;
   font-size: $font-md;
   font-weight: $font-regular
 }
+
 .bg-gradient {
   position: relative;
   border-radius: 0 0 $default-border-radius $default-border-radius;
@@ -38,10 +40,12 @@ a {
   cursor: pointer;
   text-decoration: none;
 }
-.container-lg{
+
+.container-lg {
   --bs-gutter-x: 60px;
 }
-.btn{
+
+.btn {
   padding: 18px 0;
   border: none;
   @extend %font-sm;
@@ -49,12 +53,31 @@ a {
   background: $active-regular;
   box-shadow: 0 0 20px rgba(36, 163, 255, 0.5);
   border-radius: $default-border-radius;
+
   &:hover {
     background: #0085FF;
+    color: white;
+    transition: .5s;
+    transform: perspective(300px) rotateX(45deg);
   }
+
   &:active {
-    background: #006CCF;
+  --bs-btn-active-bg: #006CCF;
+  --bs-btn-active-color: #{$white-color};
   }
+}
+
+.d-center {
+  align-items: center;
+  justify-content: center;
+}
+
+.grey-line {
+  color: rgba(255, 255, 255, 0.5);
+  margin: 15px 0;
+  border-top: 4px solid;
+  opacity: inherit;
+
 }
 
 @media (min-width: 1600px) {
@@ -62,6 +85,7 @@ a {
     max-width: 1600px;
   }
 }
+
 .navbar {
   &-brand {
     margin-top: -20px;
