--- a/scss/components/services/services.scss
+++ b/scss/components/services/services.scss
@@ -1,14 +1,23 @@
+.services {
+  .company {
+    padding: 80px 0 0 0;
+  }
 
+  .our-service {
+    padding-top: 176px;
+  }
 
-.our-service {
-  padding-top: 176px;
-}
-.navbar {
-  &-brand {
+  .navbar {
+    &-brand {
 
-    &-way {
-      color: $white-color;
+      &-way {
+        color: $white-color;
 
+      }
     }
+  }
+
+  .footer__line {
+    display: none;
   }
 }
