--- a/scss/components/team-all/first-person.scss
+++ b/scss/components/team-all/first-person.scss
@@ -1,24 +1,57 @@
-.first-person{
-  &__wrapper{
+.first-person {
+  padding: 30px 0 60px;
+
+  &__wrapper {
     gap: 60px;
   }
-  &__img{
+  &__img {
+    object-fit: cover;
     width: 400px;
     height: 500px;
     border-radius: $default-border-radius;
   }
-  &__info-text{}
-  &__inner-wrapper{
+  &__inner-wrapper {
     width: 100%
   }
-  &__info-link{
+  &__info-link {
     flex-direction: column;
     gap: 10px;
-    p{
-      margin: 0;
+  }
+  &__name {
+    @extend %font-big;
+    @extend %red-gradient;
+  }
+  &__link-post {
+    font-size: 14px;
+    color: rgba(179, 179, 186, 1);
+    margin-bottom: 10px;
+  }
+  &__link-mail, &__link-li {
+    font-size: 16px;
+    color: $active-regular;
+    margin-bottom: 10px;
+    &:hover{
+      color: $accent-color;
     }
   }
-  &__name{}
-  &__info-d-none{}
-
+  .grey-line {
+    color: rgba(230, 230, 240, 1);
+  }
+  &__info-text {
+    margin: 0;
+    font-size: 16px;
+    margin-bottom: 30px;
+  }
+  &__info-way {
+    @extend %font-s;
+    margin-bottom: 15px;
+    color: $main-color;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+}
+.team-first-person{
+  .footer__line{
+    display: none;
+  }
 }
