--- a/scss/components/team-all/team-all.scss
+++ b/scss/components/team-all/team-all.scss
@@ -39,6 +39,7 @@
     }
 
     img {
+      object-fit: cover;
       width: 100%;
       height: 400px;
       border-radius: $default-border-radius;
