add html publication and other

--- a/scss/common/common.scss
+++ b/scss/common/common.scss
@@ -56,9 +56,10 @@ a {
 
   &:hover {
     background: #0085FF;
-    color: white;
     transition: .5s;
     transform: perspective(300px) rotateX(45deg);
+    border-bottom: 1px solid $main-color;
+    box-shadow: 0 5px 3px rgb(36 163 255);
   }
 
   &:active {
