--- a/scss/publication.scss
+++ b/scss/publication.scss
@@ -1,4 +1,4 @@
 @import "common";
-@import "components/header";
+@import "components/about-us/header-about-us";
 @import "components/articles";
 @import "components/footer";
