--- a/scss/components/articles/articles.scss
+++ b/scss/components/articles/articles.scss
@@ -18,47 +18,59 @@
 
   &__wrapper {
     gap: $g-30;
-
+    flex-wrap: wrap;
     &-card {
       flex: 1 1 30%;
       background: $white-color;
       border-radius: 8px;
       overflow: hidden;
 
+      &:hover &-wrap-title{
+        text-decoration: underline;
+      }
+      & &-wrap-title:hover{
+        text-decoration: none;
+      }
+
+      &:hover{
+        box-shadow: 7px 8px 25px -5px  $main-color;
+        transform: scale(1.001);
+        transition: 0.6s;
+      }
+
       &-wrap {
         padding: $p-30;
-
         &-title {
+          display: block;
           @extend %font-sm;
           color: $active-regular;
+          &:hover{
+            color: $accent-color;
+            transition: .6s;
+          }
         }
-
         &-data {
           font-weight: $font-bold;
           font-size: 12px;
           color: $grey-bg-text;
           letter-spacing: 1px;
         }
-
         &-line {
           margin: 15px 0;
           border: 2px solid;
           color: #E6E6F0;
           opacity: 1;
         }
-
         &-text {
           font-size: $font-s;
         }
       }
-
       &-photo {
         height: 200px;
         overflow: hidden;
       }
     }
   }
-
   .image {
     @extend %picture;
 
@@ -67,14 +79,16 @@
   .image-publication-1 {
     background-image: url("../assets/img/publication/Publication-1.png");
   }
-
   .image-publication-2 {
     background-image: url("../assets/img/publication/Publication-2.png");
   }
-
   .image-publication-3 {
     background-image: url("../assets/img/publication/Publication-3.png");
   }
-
+  .image-publication-4 {
+    background-image: url("../assets/img/publication/Publication-4.png");
+  }
+  .image-publication-5 {
+    background-image: url("../assets/img/publication/Publication-5.png");
+  }
 }
-
