--- a/css/about-us.css
+++ b/css/about-us.css
@@ -50,7 +50,7 @@
   font-size: 14px;
 }
 
-.footer__number a, .footer__email a {
+.footer__number a, .footer__email a, .btn {
   font-weight: 700;
   font-size: 16px;
 }
@@ -104,11 +104,64 @@ a {
   --bs-gutter-x: 60px;
 }
 
+.btn {
+  padding: 18px 0;
+  border: none;
+  color: #fff;
+  background: #24A3FF;
+  box-shadow: 0 0 20px rgba(36, 163, 255, 0.5);
+  border-radius: 12px;
+}
+.btn:hover {
+  background: #0085FF;
+  color: #fff;
+  transition: 0.5s;
+  transform: perspective(300px) rotateX(45deg);
+  border-bottom: 1px solid #323264;
+  box-shadow: 0 5px 3px rgb(36, 163, 255);
+}
+.btn:active {
+  --bs-btn-active-bg: #006CCF;
+  --bs-btn-active-color: #fff;
+}
+
+.d-center {
+  align-items: center;
+  justify-content: center;
+}
+
+.grey-line {
+  color: rgba(255, 255, 255, 0.5);
+  margin: 15px 0;
+  border-top: 4px solid;
+  opacity: inherit;
+}
+
 @media (min-width: 1600px) {
   .container {
     max-width: 1600px;
   }
 }
+.navbar-brand {
+  margin-top: -20px;
+}
+.navbar-brand:hover .navbar-brand-way {
+  color: #F0145A;
+  transition: 0.8s;
+  box-shadow: 0 0 65px -20px black;
+}
+.navbar-brand .slash-nav {
+  margin-bottom: 14px;
+}
+.navbar-brand-way {
+  font-size: 36px;
+  line-height: 44px;
+  color: #323264;
+}
+.navbar-brand-way:hover, .navbar-brand-way .navbar-brand {
+  color: #F0145A;
+}
+
 .header {
   width: 100%;
   padding: 50px 0 30px;
