--- a/css/services.css
+++ b/css/services.css
@@ -159,13 +159,16 @@ a {
 }
 .btn:hover {
   background: #0085FF;
-  color: white;
+  color: #fff;
   transition: 0.5s;
   transform: perspective(300px) rotateX(45deg);
+  border-bottom: 1px solid #323264;
+  box-shadow: 0 5px 3px rgb(36, 163, 255);
 }
 .btn:active {
   --bs-btn-active-bg: #006CCF;
   --bs-btn-active-color: #fff;
+  border-bottom: none;
 }
 
 .d-center {
@@ -391,9 +394,6 @@ a {
 .our-service__description a {
   padding-bottom: 10px;
 }
-.our-service__wrap {
-  padding: 30px;
-}
 .our-service__info-columns img {
   margin-bottom: 30px;
 }
@@ -401,13 +401,46 @@ a {
   margin-bottom: 15px;
   font-size: 22px;
 }
-.our-service__info-columns a:hover img {
-  border-top: 10px;
-}
 .our-service__info-columns p {
   font-size: 16px;
   color: #fff;
   margin-bottom: 0;
+}
+.our-service__wrap {
+  padding: 30px;
+}
+.our-service__wrap:hover {
+  animation: shake-logo 0.3s linear;
+}
+@keyframes shake-logo {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    transform: translate(2px, 2px);
+  }
+  80% {
+    transform: translate(2px, -2px);
+  }
+  100% {
+    transform: translate(0);
+  }
+}
+.our-service__wrap:hover a {
+  text-decoration: underline;
+}
+.our-service__wrap:hover img {
+  border: 1px solid #F0145A;
+  border-radius: 22px;
+}
+.our-service__wrap a:hover {
+  text-decoration: none;
 }
 
 @media (min-width: 1600px) {
@@ -653,14 +686,42 @@ a {
   padding-top: 30px;
   background-color: #F5F5FA;
 }
+.articles__top-btn {
+  gap: 2px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  height: 42px;
+  width: 233px;
+  background: #E6E6F0;
+  border: 2px solid #E6E6F0;
+  border-radius: 12px;
+  margin: 0 auto 30px;
+}
+.articles__top-btn input[name=articles-btn] {
+  display: none;
+}
+.articles__top-btn span {
+  cursor: pointer;
+  font-weight: 700;
+  padding: 6px 27px;
+  border-radius: 8px;
+  display: inline-block;
+  color: #323264;
+}
+.articles__top-btn input[name=articles-btn]:checked + span {
+  background-color: #fff;
+}
+.articles__heading {
+  margin-bottom: 30px;
+}
 .articles__heading-link {
   margin-bottom: 10px;
 }
-.articles__heading-title {
-  margin-bottom: 30px;
-}
 .articles__wrapper {
   gap: 30px;
+  flex-wrap: wrap;
+  margin: 30px 0;
 }
 .articles__wrapper-card {
   flex: 1 1 30%;
@@ -668,11 +729,27 @@ a {
   border-radius: 8px;
   overflow: hidden;
 }
+.articles__wrapper-card:hover .articles__wrapper-card-wrap-title {
+  text-decoration: underline;
+}
+.articles__wrapper-card .articles__wrapper-card-wrap-title:hover {
+  text-decoration: none;
+}
+.articles__wrapper-card:hover {
+  box-shadow: 7px 8px 25px -5px #323264;
+  transform: scale(1.001);
+  transition: 0.6s;
+}
 .articles__wrapper-card-wrap {
   padding: 30px;
 }
 .articles__wrapper-card-wrap-title {
+  display: block;
   color: #24A3FF;
+}
+.articles__wrapper-card-wrap-title:hover {
+  color: #F0145A;
+  transition: 0.6s;
 }
 .articles__wrapper-card-wrap-data {
   font-weight: 700;
@@ -693,6 +770,9 @@ a {
   height: 200px;
   overflow: hidden;
 }
+.articles__btn {
+  padding: 18px 30px;
+}
 .articles .image-publication-1 {
   background-image: url("../assets/img/publication/Publication-1.png");
 }
@@ -702,23 +782,31 @@ a {
 .articles .image-publication-3 {
   background-image: url("../assets/img/publication/Publication-3.png");
 }
+.articles .image-publication-4 {
+  background-image: url("../assets/img/publication/Publication-4.png");
+}
+.articles .image-publication-5 {
+  background-image: url("../assets/img/publication/Publication-5.png");
+}
 
 @media (min-width: 1600px) {
   .articles .container-lg {
     max-width: 1600px;
   }
 }
-@media (max-width: 992px) and (min-width: 576px) {
-  .articles__wrapper {
-    flex-wrap: wrap;
+@media (max-width: 1600px) {
+  .articles .container-lg {
+    min-width: 94%;
+  }
+}
+@media (max-width: 992px) {
+  .articles__wrapper-card {
+    flex: 1 1 47%;
   }
 }
 @media (max-width: 576px) {
   .articles__heading-title {
     font-size: 30px;
-  }
-  .articles__wrapper {
-    flex-wrap: wrap;
   }
   .articles__wrapper-card {
     flex: 1 1 100%;
